# archivehost

./: .dockerignore  .env  .gitignore  .neoconf.json  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  package.json  pnpm-lock.yaml  schema.graphql
archivehost/: .gitignore  Cargo.toml
archivehost/.cargo/: config.toml
archivehost/db/: Cargo.toml
archivehost/db/entity/: Cargo.toml
archivehost/db/entity/src/: archive.rs  lib.rs  prelude.rs
archivehost/db/migration/: Cargo.toml
archivehost/db/migration/src/: m20220101_000001_create_table.rs
archivehost/db/src/: lib.rs  main.rs  migration.rs
archivehost/db/src/migration/m20240215_01_create_table/: mod.rs
archivehost/db/src/migration/m20240215_01_create_table/entity/: archive.rs  download_queue.rs  download_queue_group.rs
archivehost/prisma/: schema.prisma
archivehost/prisma-cli/: Cargo.toml
archivehost/prisma/migrations/20240212170626_init/: migration.sql
archivehost/src/: cli.rs  constant.rs  main.rs
archivehost/src/app/: download.rs  fixdb.rs  mod.rs
archivehost/src/app/serve/: download_queue.rs  mod.rs
archivehost/src/app/serve/download_queue/: mod.rs  mutate.rs  subscribe.rs  task_executor.rs
archivehost/src/app/serve/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
archivehost/src/app/serve/graphql/common/: mod.rs
archivehost/src/app/serve/graphql/interface/: download_queue.rs  download_queue_group.rs  mod.rs
archivehost/src/app/serve/graphql/mutation/: download.rs
archivehost/src/app/serve/graphql/query/: download_queue.rs  mod.rs  site_list.rs
archivehost/src/app/serve/graphql/subscription/: download_queue.rs  mod.rs
archivehost/src/app/serve/web/: decode.rs  dummy_file.rs  latest.rs  mod.rs  serve_file.rs  timestamp.rs  utils.rs
archivehost/src/cli/: download.rs  fixdb.rs
archivehost/src/cli/serve/: asset.rs  frontend.rs  mod.rs
archivehost/src/cli/serve/graphql/: mod.rs  query.rs
archivehost/src/cli/serve/web/: decode.rs  dummy_file.rs  latest.rs  mod.rs  serve_file.rs  timestamp.rs  utils.rs
archivehost/src/common/: download.rs  timestamp.rs
archivehost/src/common/download/: cdx.rs  mod.rs
archivehost/src/common/wayback_client/: mod.rs
archivehost/src/config/: cli.rs  interface.rs  mod.rs
asset/: loadSW.html  siteIndexTemplate.html  sw.js
crates/cli/: Cargo.toml
crates/cli/src/: download.rs  main.rs  serve.rs
crates/core/: Cargo.toml
crates/web/: Cargo.toml
frontend/: README.md  codegen.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.css  main.tsx  router.ts  urql-client.ts
frontend/src/gql/: gql.ts  graphql.ts
frontend/src/pages/: _app.tsx  downloads.tsx  queue.tsx  sites.tsx
frontend/src/utils/: timestamp.ts
migrations/: 20240212065919_init.sql
prisma/migrations/20240212125810_init/: migration.sql
src/: config.rs  download.rs  main.rs  serve.rs  wayback_client.rs
src/app/: download.rs  mod.rs
src/app/serve/: asset.rs  mod.rs
src/app/serve/web/: latest.rs  mod.rs  serve_file.rs  timestamp.rs  utils.rs
src/cli/: download.rs  fixdb.rs  interface.rs  mod.rs
src/cli/serve/: mod.rs
src/cli/serve/web/: latest.rs  mod.rs  serve_file.rs  timestamp.rs  utils.rs
src/common/: download.rs  mod.rs
src/common/wayback_client/: error.rs  mod.rs
src/config/: cli.rs  init.rs  mod.rs  once_cell_wrapper.rs
src/serve/: asset.rs  web.rs
src/wayback_client/: error.rs
