[package]
name = "archivehost-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
indicatif = "0.17.8"
url = "2.5.0"
urlencoding = "2.1.3"
colored = "2.1.0"
tower-http = { version = "0.5.1", features = ["fs"] }
bytes = "1.5.0"
serde_url_params = "0.2.1"
thiserror = "1.0.56"
http = "1.0.0"
reqwest = { version = "0.11.24", features = ["json", "gzip"] }
eyre = "0.6.12"
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
futures = "0.3.30"
once_cell = "1.19.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
