[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.12.14", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
async-graphql = { version = "7.0.1" }
