[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["sea-orm-migration/cli"]

[dependencies]
sea-orm-migration = { version = "0.12.14", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
], default-features = false }
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
