[package]
name = "archivehost-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
archivehost-core = { path = "../core" }
eyre = { workspace = true }
indicatif = "0.17.8"
futures = { workspace = true }
url = "2.5.0"
urlencoding = "2.1.3"
colored = "2.1.0"
axum = { workspace = true }
tower-http = { version = "0.5.1", features = ["fs"] }
bytes = "1.5.0"
