[package]
name = "archivehost-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
reqwest = { version = "0.11.24", features = ["json", "gzip"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_url_params = "0.2.1"
thiserror = "1.0.56"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
